{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 47,
  "lineage": "deea0d9a-2e35-0ec1-82a4-10e7c0082d80",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "battlesnake",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c104f6f4a5d9d1d5",
            "arn": "arn:aws:ec2:us-east-1:265577504730:instance/i-0bb8dcc971cbb32e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb8dcc971cbb32e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "battlesnake-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d99883260fd1478",
            "private_dns": "ip-10-0-0-138.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.138",
            "public_ip": "54.197.12.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04950c59de176f679",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de2ef00ee6826502",
            "tags": {
              "Name": "battlesnake-ec2",
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "Name": "battlesnake-ec2",
              "env": "prod",
              "project": "battlesnake"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a89345e2e554fb42"
            ]
          },
          "dependencies": [
            "aws_security_group.public_traffic",
            "aws_subnet.public",
            "aws_vpc.vpc1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:internet-gateway/igw-02dc9457bce53e9f9",
            "id": "igw-02dc9457bce53e9f9",
            "owner_id": "265577504730",
            "tags": {
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "env": "prod",
              "project": "battlesnake"
            },
            "vpc_id": "vpc-095e34617db18c9c8"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:route-table/rtb-09c8a03720117704b",
            "id": "rtb-09c8a03720117704b",
            "owner_id": "265577504730",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02dc9457bce53e9f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "env": "prod",
              "project": "battlesnake"
            },
            "timeouts": null,
            "vpc_id": "vpc-095e34617db18c9c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cff9ebc2f4c6162",
            "route_table_id": "rtb-09c8a03720117704b",
            "subnet_id": "subnet-0de2ef00ee6826502"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:security-group/sg-0a89345e2e554fb42",
            "description": "Security group allowing traffic on port 443",
            "egress": [],
            "id": "sg-0a89345e2e554fb42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "136.55.173.17/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "battlesnake-public-traffic",
            "name_prefix": "",
            "owner_id": "265577504730",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "env": "prod",
              "project": "battlesnake"
            },
            "timeouts": null,
            "vpc_id": "vpc-095e34617db18c9c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:subnet/subnet-0de2ef00ee6826502",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de2ef00ee6826502",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "265577504730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "env": "prod",
              "project": "battlesnake"
            },
            "vpc_id": "vpc-095e34617db18c9c8"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:vpc/vpc-095e34617db18c9c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-028d42619efda587f",
            "default_route_table_id": "rtb-09c8a03720117704b",
            "default_security_group_id": "sg-067a7bcd7818b9062",
            "dhcp_options_id": "dopt-5766332d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-095e34617db18c9c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c8a03720117704b",
            "owner_id": "265577504730",
            "tags": {
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "env": "prod",
              "project": "battlesnake"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:security-group-rule/sgr-0f4e4256eeedaa2be",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0f4e4256eeedaa2be",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a89345e2e554fb42",
            "security_group_rule_id": "sgr-0f4e4256eeedaa2be",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_traffic",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:security-group-rule/sgr-08386022e07cddac6",
            "cidr_ipv4": "136.55.173.17/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-08386022e07cddac6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a89345e2e554fb42",
            "security_group_rule_id": "sgr-08386022e07cddac6",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_traffic",
            "aws_vpc.vpc1"
          ]
        }
      ]
    }
  ]
}